--- a/Final/index.html
+++ b/Final/index.html
@@ -16,9 +16,10 @@
 
     <nav>
         <ul id="list01">
-            <li>01</li>
-            <li>02</li>
-            <li>03</li>
+            <li>目錄</li>
+            <li>偶像夢幻祭</li>
+            <li>世界計畫</li>
+            <li>偶像星願</li>
         </ul>
     </nav>
 
